@@ -1,3 +1,7 @@
+2010-09-23  Charlie Zender  <zender@uci.edu>
+
+	* Cleanup chunking initialization prior to bug hunt
+
 2010-09-19  Charlie Zender  <zender@uci.edu>
 
 	* Note that ncks 4.0.3 and earlier suffer from a bug Henry caught
